# task-4-group

./: README.md  pyproject.toml  shell.nix
src/lesson_4_group/: main.py
