[project]
name = "lesson-4-group"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "rahmannudn", email = "rahmannudn0@gmail.com"},
]
dependencies = [
    "pylint>=3.0.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
